--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 2nd, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 5th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What was one of your favorite Saturday morning cartoons growing up?</li>
+                        <li>What is one of your favorite "modern" Disney/Pixar movies?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/atla_cartoon.jpg"
-                            alt="lab in lab"
+                            src="images/inside-out.jpg"
+                            alt="feelings"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Wiki with Sidebar</li>
+                        <li><span class="type">Exercise</span>CSS Grid Drills</li>
+                        <li><span class="type">Exercise</span>MeTube</li>
                     </ul>
                 </div>
 
@@ -33,22 +34,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
-                            <li><span class="type">PowerPoint</span>CSS Grid</li>
+                            <li><span class="type">Exercise</span>CSS Grid Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Two Column Layouts (Grid)</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Mixed)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                            <li><span class="type">Exercise</span>MeTube</li>
                         </ul>
                     </div>
                 </div>
