--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 6th, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 7th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is one of your favorite DreamWorks movies?</li>
+                        <li>What is your favorite Marvel movie/series? (if you have one)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/httyd.jpg"
+                            src="images/avengers.jpeg"
                             alt="how to train your dragon"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>"mebay" Product Page</li>
+                        <li>N/A</li>
                     </ul>
                 </div>
 
@@ -33,22 +33,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Basic Flexbox Review</li>
-                            <li><span class="type">Kahoot</span>Basic CSS Grid Review</li>
+                            <li><span class="type">Lab Time</span>Page Layout Exercises/Projects</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>"mebay" Product Page</li>
+                            <li><span class="type">Lab Time</span>Extra Credit</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>"mebay" Product Page [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
