--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 7th, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 8th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite Marvel movie/series? (if you have one)</li>
+                        <li>Who is your favorite supervillain? (if you have one)</li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/avengers.jpeg"
+                            src="images/venom.jpeg"
                             alt="how to train your dragon"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li>N/A</li>
+                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
+                        <li><span class="type">Exercise</span>Trek Cards</li>
+                        <li><span class="type">Exercise</span>Animagram Cards</li>
                     </ul>
                 </div>
 
@@ -33,21 +35,22 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Page Layout Exercises/Projects</li>
+                            <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
+                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Extra Credit</li>
+                            <li><span class="type">Exercise</span>Trek Cards</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Animagram Cards</li>
                         </ul>
                     </div>
                 </div>
