--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -36,7 +36,12 @@
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
                             <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#cards-and-buttons-v2">
+                                    Cards, Buttons, and Gradients
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
