--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -13,19 +13,21 @@
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Who is your favorite supervillain? (if you have one)</li>
+                        <li>
+                            Do you have a favorite book/movie/game that is 
+                            really obscure, and no one knows about?
+                        </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/venom.jpeg"
-                            alt="how to train your dragon"
+                            src="images/shooting-star.jpg"
+                            alt="shooting star"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                        <li><span class="type">Exercise</span>Trek Cards</li>
-                        <li><span class="type">Exercise</span>Animagram Cards</li>
+                        <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
+                        <li><span class="type">Exercise</span>Pokemon Cards</li>
                     </ul>
                 </div>
 
@@ -35,27 +37,33 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#cards-and-buttons-v2">
-                                    Cards, Buttons, and Gradients
-                                </a>
-                            </li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
+                            <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Trek Cards</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/recipes.html#three-cards">
+                                    Content Layout - Three Cards
+                                </a>
+                            </li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/recipes.html#media-and-text">
+                                    Content Layout - Media & Text
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Animagram Cards</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                 </div>
