--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -37,8 +37,8 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                             <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Side-by-side Content Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
