--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 8th, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 12th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Do you have a favorite book/movie/game that is 
-                            really obscure, and no one knows about?
+                            Would you rather have a pause or rewind button in your life?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/shooting-star.jpg"
+                            src="images/rewind.png"
                             alt="shooting star"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
-                        <li><span class="type">Exercise</span>Pokemon Cards</li>
+                        <li><span class="type">Exercise</span>Three Heroes</li>
                     </ul>
                 </div>
 
@@ -37,8 +35,13 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
-                            <li><span class="type">PowerPoint</span>Side-by-side Content Layouts</li>
+                            <li><span class="type">PowerPoint</span>Hero Content Layouts</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#heroes">
+                                    Heroes
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
@@ -47,23 +50,18 @@
                         <ul>
                             <li>
                                 <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/recipes.html#three-cards">
-                                    Content Layout - Three Cards
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#heroes">
+                                    Heroes [cont.]
                                 </a>
                             </li>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/recipes.html#media-and-text">
-                                    Content Layout - Media & Text
-                                </a>
-                            </li>
+                            <li><span class="type">Exercise</span>Three Heroes</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Pokemon Cards</li>
+                            <li><span class="type">Exercise</span>Three Heroes [cont.]</li>
                         </ul>
                     </div>
                 </div>
