--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 13th, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 14th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather watch <b>only scary movies</b> or 
-                            <b>only rom-coms</b> for the rest of your life?
+                            Do you believe in <b class="love">true love</b>?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/anti-love.jpg"
-                            alt="shooting star"
+                            src="images/fox-love.webp"
+                            alt="fox love"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                        <li><span class="type">Project</span>Personal Portfolio Site</li>
                     </ul>
                 </div>
 
@@ -36,33 +35,22 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Gallery Content Layouts</li>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#galleries">
-                                    Galleries
-                                </a>
-                            </li>
+                            <li><span class="type">Demo</span>Google Fonts v2</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#galleries">
-                                    Galleries [cont.]
-                                </a>
-                            </li>
-                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
