--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 14th, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 15th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Do you believe in <b class="love">true love</b>?
+                            Would you rather be able to:
+                            <ul>
+                                <li>&bull; eat anything you want in one meal a day for perfect nutrition?</li>
+                                <li>&bull; sleep for 1 hour and be perfectly rested?
+                            </ul>
                         </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/fox-love.webp"
+                            src="images/power-nap.jpeg"
                             alt="fox love"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Personal Portfolio Site</li>
+                        <li>N/A</li>
                     </ul>
                 </div>
 
@@ -35,22 +39,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Google Fonts v2</li>
-                            <li><span class="type">Project</span>Personal Portfolio Site</li>
+                            <li><span class="type">Lab Time</span>Previous Projects</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
+                            <li><span class="type">Lab Time</span>Extra Credit - Product Comparison Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
