--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,30 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 15th, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 16th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather be able to:
+                            Would you rather:
                             <ul>
-                                <li>&bull; eat anything you want in one meal a day for perfect nutrition?</li>
-                                <li>&bull; sleep for 1 hour and be perfectly rested?
+                                <li>- spend a week unable to go <b>outside</b> your home?</li>
+                                <li>- spend a week unable to go <b>inside</b> your home?
                             </ul>
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/power-nap.jpeg"
-                            alt="fox love"
+                            src="images/great-indoors.webp"
+                            alt="the great indoors"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li>N/A</li>
+                        <li><span class="type">Quiz</span>Content Layouts</li>
+                        <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
+                        <li><span class="type">Exercise</span>Client Navbars</li>
                     </ul>
                 </div>
 
@@ -39,21 +41,25 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Previous Projects</li>
+                            <li><span class="type">Quiz</span>Content Layouts</li>
+                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Extra Credit - Product Comparison Page</li>
+                            <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
+                            <li><span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#navbars-basic">Navbars - Basic</a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Client Navbars</li>
                         </ul>
                     </div>
                 </div>
