--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 20th, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 21st, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather:
-                            <ul>
-                                <li>- get an extra hour in every day, or</li>
-                                <li>- get an extra day every 24 days?</li>
-                            </ul>
+                            If you could have any creature (either real or fantastical)
+                            as a pet, what would you choose?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/melty-time.webp"
-                            alt="melty time"
+                            src="images/alt-animal-names.webp"
+                            alt="true names"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Media Queries</li>
+                        <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                     </ul>
                 </div>
 
@@ -39,24 +36,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Responsive Layouts</li>
-                            <li><span class="type">PowerPoint</span>Media Queries</li>
+                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3">Media Queries and Responsiveness</a>
-                            </li>
+                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Media Queries</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site</li>
                         </ul>
                     </div>
                 </div>
