--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 21st, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 22st, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you could have any creature (either real or fantastical)
-                            as a pet, what would you choose?
+                            Would you rather have the power to turn invisible,
+                            or levitate objects?
                         </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/alt-animal-names.webp"
+                            src="images/broom-cats.jpg"
                             alt="true names"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                        <li><span class="type">Exercise</span>Hover Galleries</li>
                     </ul>
                 </div>
 
@@ -36,21 +36,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                            <li><span class="type">Demo</span>Hiding and Showing Content</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                            <li><span class="type">Exercise</span>Hover Galleries</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Dropdown Menu Site</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
