--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -36,7 +36,9 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Hiding and Showing Content</li>
+                            <li>
+                                <span class="type">Demo</span><a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-prep" target="_blank">Hiding and Showing Content</a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
