--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -38,7 +38,7 @@
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
                             <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
-                            <li><span class="type">Demo</span>Dropdown Menus</li>
+                            <li><span class="type">Demo</span><a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav?category=week5" target="_blank">Dropdown Menus</a></li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
