--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -27,7 +27,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EVAL</span></li>
+                        <li><span class="type">FINAL EVAL</span> Due at 11:15am</li>
                         <li><span class="type">Project</span>Restaurant Site (Complete)</li>
                     </ul>
                 </div>
@@ -38,7 +38,7 @@
 
                         <h3>Period 1 (9:10am-12pm)</h3>
                         <ul>
-                            <li><span class="type">FINAL EVAL</span></li>
+                            <li><span class="type">FINAL EVAL</span> Due at 11:15am</li>
                         <!-- </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
