--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 29th, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 1st, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Happy Leap Year! Leap Years only happen
-                            every four years; what do you hope to have 
-                            accomplished in four years?
+                            Which do you worry more over: <br>- things that have
+                            happened in the past, or 
+                            <br>- things that may happen 
+                            in the future?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/frog.webp"
-                            alt="leap year frog"
+                            src="images/overthinking-fox.webp"
+                            alt="overthinking fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EVAL</span> Due at 11:15am</li>
-                        <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                        <li><span class="type">Critique</span>Kaitlin, Christina, Michael, Chris, Casey, Sarai, and Steven</li>
                     </ul>
                 </div>
 
@@ -36,16 +36,21 @@
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
 
-                        <h3>Period 1 (9:10am-12pm)</h3>
+                        <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">FINAL EVAL</span> Due at 11:15am</li>
-                        <!-- </ul>
+                            <li><span class="type">Critique</span>Kaitlin</li>
+                            <li><span class="type">Critique</span>Christina</li>
+                            <li><span class="type">Critique</span>Michael</li>
+                        </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
-                        <ul> -->
-                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                        <ul>
+                            <li><span class="type">Critique</span>Chris</li>
+                            <li><span class="type">Critique</span>Casey</li>
+                            <li><span class="type">Critique</span>Sarai</li>
+                            <li><span class="type">Critique</span>Steven</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
