--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -14,10 +14,9 @@
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Which do you worry more over: <br>- things that have
-                            happened in the past, or 
-                            <br>- things that may happen 
-                            in the future?
+                            Which do you fixate on more: 
+                            <br>- things that have happened in the past, or 
+                            <br>- things that may happen in the future?
                         </li>
                     </ul>
                     <div class="img-container more-space">
@@ -28,7 +27,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Critique</span>Kaitlin, Christina, Michael, Chris, Casey, Sarai, and Steven</li>
+                        <li><span class="type">Critiques</span>Kaitlin, Christina, Michael, Chris, Casey, Sarai, and Steven</li>
                     </ul>
                 </div>
 
