--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -27,7 +27,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Critiques</span>Kaitlin, Christina, Michael, Chris, Casey, Sarai, and Steven</li>
+                        <li><span class="type">Critiques</span>Kaitlin, Christine, Michael, Chris, Casey, Sarai, and Steven</li>
                     </ul>
                 </div>
 
@@ -38,7 +38,7 @@
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
                             <li><span class="type">Critique</span>Kaitlin</li>
-                            <li><span class="type">Critique</span>Christina</li>
+                            <li><span class="type">Critique</span>Christine</li>
                             <li><span class="type">Critique</span>Michael</li>
                         </ul>
                     </div>
