--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -36,7 +36,7 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Career Development Crash Course Reivew</li>
+                            <li><span class="type">PowerPoint</span>Career Development Crash Course Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
