--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,24 @@
     </head>
     <body style="padding:24px;">
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 19th, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 20th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Are you an early bird, or a night owl?
+                            How do you feel about WordPress so far?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/night-owl.webp"
-                            alt="night owl"
+                            src="images/overthinking.webp"
+                            alt="overthinking"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
+                        <li><span class="type">Exercise</span>Wiki with Sidebar</li>
                     </ul>
                 </div>
 
@@ -34,21 +34,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Demo</span>Columns and Layouts, Anchors and Links</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Customizing WordPress</li>
+                            <li><span class="type">Exercise</span>Wiki with Sidebar</li>
                         </ul>
                     </div>
-                    <h3 class="centered">Lunch Break (45min)</h3>
+                    <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
+                            <li><span class="type">Exercise</span>Wiki with Sidebar (cont.)</li>
                         </ul>
                     </div>
                 </div>
