--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -10,7 +10,7 @@
             <h1>GDWD 105 - Agenda for March 21th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
-                    <h2>Warm-up Question</h2>
+                    <h2>Attendance Question</h2>
                     <ul>
                         <li>
                             Coffee? Tea? Or other?
