--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 25th, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 26th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your go-to comfort food?</li>
+                        <li>What is your favorite restaurant?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/feelingsnacky.jpg"
-                            alt="feeling snacky"
+                            src="images/pho-fox.webp"
+                            alt="pho-fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
-                        <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
+                        <li><span class="type">Exercise</span>Hello World</li>
+                        <li><span class="type">Exercise</span>Basic HTML Drills</li>
                     </ul>
                 </div>
 
@@ -33,24 +33,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
-                            <li><span class="type">PowerPoint</span>General Web Development</li>
+                            <li><span class="type">PowerPoint</span>HTML Tags and Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to HTML</li>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
+                            <li><span class="type">Demo</span>HTML Text Styling Elements</li>
+                            <li><span class="type">PowerPoint</span>Clean Code (Part 1)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup (cont.)</li>
-                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
+                            <li><span class="type">Exercise</span>Hello World</li>
+                            <li><span class="type">Exercise</span>Basic HTML Drills</li>
                         </ul>
                     </div>
                 </div>
