--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,22 +7,22 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 29th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 1st, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite TV series/anime?</li>
+                        <li>Experience any interesting April Fool's Day pranks today?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/tv.webp"
+                            src="images/lab-attire.webp"
                             alt="tv"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>HTML Potluck</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -32,22 +32,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Children Review</li>
-                            <li><span class="type">Project</span>HTML Potluck</li>
+                            <li><span class="type">Lab Time</span>Assignment Feedback</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
