--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -32,6 +32,7 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
+                            <li><span class="type">Project Showcase!</span>HTML Potluck</li>
                             <li><span class="type">Lab Time</span>Assignment Feedback</li>
                         </ul>
                     </div>
